*
* 0.2.11
*

- Basic network maps implemented
- Non-standart (other than 4701) ports now can be used for client-server
  communications
- Copy/move/delete of saved desktop configurations implemented
- SNMP walk function improved
- Fixed issues: #83, #85, #88


*
* 0.2.10
*

- Web interface redesigned
- Added OpenBSD platform subagent
- Added UPS monitoring subagent
- Netscreen (now Juniper) MIBs added
- Windows console: graphs improved
- Added possibility to log all incoming SNMP traps
- Fixed problems with very long opening time of event log
- Fixed issues: #58, #72, #73, #76, #78, #81


*
* 0.2.9
*

- Added built-in scripting language (NXSL - NetXMS Scripting Language)
- Implemented DCI transformations (using NXSL)
- Implemeted auto discovery filters (using NXSL)
- Added startup scripts for Gentoo Linux
- Windows console: agent configuration editor improved
- Alarm Viewer: repeated alarm sounds added
- Fixed issues: #64, #68, #69, #70, #71, #75


*
* 0.2.8
*

- Implemented agent proxy
- Object tools fully implemented (including configuration)
- Added web session manager and very basic web interface
- Added "node capability expiration" feature
- Windows console:
	- Fixed inconsistencies in object access control configuration
	- Now can play sounds when new alarm arrives
	- Added voice notifications for alarms (using SAPI)
- Alarm viewer: 
	- The same audio notification options added
	- Current time display added
- Added support for Windows authentication in Microsoft SQL driver
- Server configuration wizard: added possibility to configure service account
- Added support for transactions in database manager
- Fixed bugs in server's SMTP sender
- Fixed bug in SMS driver
- Fixed issues: #57, #61, #63, #65, #66


*
* 0.2.7
*

- Advanced status calculation mechanism implemented
- Added support for SQLite embedded database engine
- New MIBs added: IEEE 802.11
- PING subagent: added "PacketRate" configuration parameter
- Fixed some portability issues for 64bit platforms