@@ -119,6 +119,7 @@ extern CConsoleApp theApp;
 #define NXCM_UPDATE_GRAPH_POINT    (WM_USER + 120)
 #define NXCM_TRAP_LOG_RECORD       (WM_USER + 121)
 #define NXCM_SUBMAP_CHANGE         (WM_USER + 122)
+#define NXCM_CHANGE_PASSWORD       (WM_USER + 123)
 
 
 //
