@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CDesktopManager
+LastClass=CPasswordChangeDlg
 LastTemplate=CMDIChildWnd
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "nxcon.h"
@@ -15,22 +15,22 @@ Class4=CChildFrame
 Class7=CEventBrowser
 Class9=CMapView
 
-ResourceCount=172
+ResourceCount=173
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDD_MIB_BROWSER
+Resource2=IDD_OBJECT_RELATIONS
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDD_DCI_TRANSFORM
-Resource5=IDD_CREATE_NETSRV
+Resource4=IDD_OBJTOOL_GENERAL
+Resource5=IDA_MDI_DEFAULT
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDA_DC_EDITOR
+Resource6=IDD_CP_GENERAL
 Class11=CProgressDialog
-Resource7=IDD_EDIT_RULE_SEVERITY
+Resource7=IDD_DCI_DATA_EXPORT
 Class12=CObjectBrowser
-Resource8=IDD_OBJECT_NETSRV_GENERAL
+Resource8=IDD_SELECT_AGENT_PARAM
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,7 +46,7 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDD_CREATE_TEMPLATE
+Resource20=IDD_OBJTOOL_OPTIONS
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
@@ -59,32 +59,32 @@ Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDA_AGENT_CFG_EDITOR
+Resource24=IDD_EDIT_RULE_ALARM
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_EDIT_TRAP_ARG
+Resource27=IDD_OBJTOOL_COLUMNS (English (U.K.))
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDD_OBJECT_PRESENTATION
-Resource32=IDD_SELECT_EVENT
+Resource31=IDD_LASTVAL_PROP
+Resource32=IDD_GRAPH_PROP_DATA
 Class29=CUserSelectDlg
-Resource33=IDD_SELECT_ACTION
+Resource33=IDD_SAVE_AGENT_CFG
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_SELECT_INTERNAL_ITEM
-Resource36=IDA_OBJECT_TOOLS_EDITOR
+Resource35=IDD_DATA_QUERY
+Resource36=IDD_NEW_ACTION
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDD_DCI_THRESHOLDS
+Resource38=IDA_NETMAP
 Class33=CGroupPropDlg
 Resource39=IDM_VIEW_SPECIFIC
-Resource40=IDD_OBJECT_CAPS
-Resource41=IDD_CREATE_CONTAINER
+Resource40=IDD_CHANGE_IP
+Resource41=IDD_DCI_SCHEDULE
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDD_ABOUTBOX
+Resource48=IDD_SELECT_ACTION
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_DCI_DATA_EXPORT
+Resource50=IDA_GRAPH
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDD_OBJECT_NODE_POLL
+Resource52=IDA_EPP
 Class48=CObjectSelDlg
-Resource53=IDD_USER_PROPERTIES
-Resource54=IDD_DATA_QUERY
+Resource53=IDD_SELECT_INTERNAL_ITEM
+Resource54=IDD_DCI_TRANSFORM
 Class49=CRuleCommentDlg
-Resource55=IDD_ACTION_PROPERTIES
+Resource55=IDD_EDIT_IP_SUBNET
 Class50=CEventSelDlg
-Resource56=IDD_GRAPH_PROP_DATA
+Resource56=IDA_ACTION_EDITOR
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_DESKTOP_SAVE_AS
+Resource58=IDD_OBJECT_NETSRV_GENERAL
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDD_CREATE_TG
+Resource62=IDD_NEW_OBJECT_TOOL
 Class52=CRuleSeverityDlg
-Resource63=IDD_INPUT_BOX
+Resource63=IDR_MAINFRAME
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_OBJECT_RELATIONS
+Resource65=IDA_ALARM_BROWSER
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_OBJECT_NODE_GENERAL
-Resource70=IDD_SELECT_AGENT_PARAM
+Resource69=IDD_CREATE_NODE
+Resource70=IDD_SUBMAP_BKGND
 Class57=CNewActionDlg
-Resource71=IDD_OBJECT_GENERAL
+Resource71=IDD_CREATE_TEMPLATE
 Class58=CEditActionDlg
 Resource72=IDM_CONTEXT
 Class59=CActionSelDlg
-Resource73=IDD_CREATE_NODE
+Resource73=IDD_OBJECT_CAPS
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_EDIT_RULE_ALARM
+Resource76=IDD_EDIT_VARIABLE
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDA_SERVER_CFG_EDITOR
+Resource77=IDD_EDIT_RULE_SEVERITY
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,27 +158,27 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_LASTVAL_PROP
-Resource84=IDD_REQUEST_PROCESSING
+Resource83=IDA_TRAP_EDITOR
+Resource84=IDD_CREATE_TG
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_EDIT_RULE_COMMENT
-Resource86=IDD_SELECT_OBJECT
+Resource85=IDD_GRAPH_PROP_SETTINGS
+Resource86=IDD_DESKTOP_SAVE_AS
 Class68=CTrapEditor
-Resource87=IDD_EDIT_EVENT
-Resource88=IDD_NEW_ACTION
-Resource89=IDA_SCRIPT_MANAGER
+Resource87=IDD_CREATE_CONTAINER
+Resource88=IDD_OBJECT_VPNC_GENERAL
+Resource89=IDD_ACTION_PROPERTIES
 Class69=CDataQueryDlg
-Resource90=IDD_EDIT_TRAP
+Resource90=IDD_REMOVE_TEMPLATE (English (U.K.))
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_THRESHOLD
-Resource93=IDD_GRAPH_PROP_SETTINGS
+Resource92=IDD_OBJECT_NODE_POLL
+Resource93=IDA_EVENT_EDITOR
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_CP_GENERAL
+Resource94=IDD_CREATE_VPNC
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
@@ -270,41 +270,42 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDD_OBJECT_SECURITY
-Resource141=IDD_SELECT_USER
-Resource142=IDD_NEW_USER
-Resource143=IDD_GROUP_PROPERTIES
-Resource144=IDD_SET_PASSWORD
-Resource145=IDD_DCI_COLLECTION
-Resource146=IDD_EDIT_VARIABLE
-Resource147=IDD_CREATE_VPNC
-Resource148=IDD_OBJECT_VPNC_GENERAL
-Resource149=IDD_EDIT_IP_SUBNET
-Resource150=IDD_SAVE_AGENT_CFG
-Resource151=IDD_DCI_SCHEDULE
-Resource152=IDD_OBJECT_STATUS
-Resource153=IDD_OBJTOOL_GENERAL
-Resource154=IDD_NEW_OBJECT_TOOL
-Resource155=IDD_OBJTOOL_OPTIONS
-Resource156=IDD_CHANGE_IP
-Resource157=IDD_REMOVE_TEMPLATE (English (U.K.))
-Resource158=IDD_OBJTOOL_COLUMNS (English (U.K.))
-Resource159=IDD_SNMP_WALK (English (U.K.))
-Resource160=IDA_ACTION_EDITOR
-Resource161=IDA_MDI_DEFAULT
-Resource162=IDA_OBJECT_BROWSER
-Resource163=IDA_EPP
-Resource164=IDA_ALARM_BROWSER
-Resource165=IDA_NETMAP
-Resource166=IDA_EVENT_EDITOR
-Resource167=IDR_MAINFRAME
-Resource168=IDA_TRAP_EDITOR
-Resource169=IDA_GRAPH
-Resource170=IDA_PACKAGE_MGR
-Resource171=IDA_LAST_VALUES
+Resource140=IDD_SNMP_WALK (English (U.K.))
+Resource141=IDD_REQUEST_PROCESSING
+Resource142=IDD_EDIT_TRAP_ARG
+Resource143=IDA_OBJECT_BROWSER
+Resource144=IDD_INPUT_BOX
+Resource145=IDD_CREATE_NETSRV
+Resource146=IDA_PACKAGE_MGR
+Resource147=IDA_SERVER_CFG_EDITOR
+Resource148=IDA_AGENT_CFG_EDITOR
+Resource149=IDA_DC_EDITOR
+Resource150=IDA_OBJECT_TOOLS_EDITOR
+Resource151=IDA_SCRIPT_MANAGER
+Resource152=IDD_ABOUTBOX
+Resource153=IDD_EDIT_EVENT
+Resource154=IDD_OBJECT_NODE_GENERAL
+Resource155=IDD_OBJECT_STATUS
+Resource156=IDD_EDIT_TRAP
+Resource157=IDD_OBJECT_GENERAL
+Resource158=IDD_OBJECT_SECURITY
+Resource159=IDD_SELECT_USER
+Resource160=IDD_MIB_BROWSER
+Resource161=IDD_USER_PROPERTIES
+Resource162=IDD_GROUP_PROPERTIES
+Resource163=IDD_SET_PASSWORD
+Resource164=IDD_DCI_COLLECTION
+Resource165=IDD_DCI_THRESHOLDS
+Resource166=IDD_THRESHOLD
+Resource167=IDD_NEW_USER
+Resource168=IDD_SELECT_OBJECT
+Resource169=IDD_EDIT_RULE_COMMENT
+Resource170=IDD_SELECT_EVENT
+Resource171=IDD_OBJECT_PRESENTATION
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_SUBMAP_BKGND
+Resource172=IDA_LAST_VALUES
+Resource173=IDD_CHANGE_PASSWORD
 
 [CLS:CConsoleApp]
 Type=0
@@ -382,8 +383,9 @@ Command22=ID_VIEW_REFRESH
 Command23=ID_TOOLS_ADDNODE
 Command24=ID_TOOLS_MIBBROWSER
 Command25=ID_TOOLS_SNMPWALK
-Command26=ID_APP_ABOUT
-CommandCount=26
+Command26=ID_TOOLS_CHANGEPASSWORD
+Command27=ID_APP_ABOUT
+CommandCount=27
 
 [TB:IDR_MAINFRAME]
 Type=1
@@ -4611,4 +4613,18 @@ ImplementationFile=DesktopManager.cpp
 BaseClass=CMDIChildWnd
 Filter=M
 VirtualFilter=mfWC
+LastObject=CDesktopManager
+
+[DLG:IDD_CHANGE_PASSWORD]
+Type=1
+Class=?
+ControlCount=8
+Control1=IDC_EDIT_PASSWD1,edit,1342242976
+Control2=IDC_EDIT_PASSWD2,edit,1342242976
+Control3=IDOK,button,1342242817
+Control4=IDCANCEL,button,1342242816
+Control5=IDC_STATIC,static,1342308352
+Control6=IDC_STATIC,static,1342308352
+Control7=IDC_STATIC,static,1342177283
+Control8=IDC_STATIC_INFO,static,1342308352
 
