@@ -213,6 +213,8 @@ BEGIN
         MENUITEM "&Add node...\tF11",           ID_TOOLS_ADDNODE
         MENUITEM "&MIB Browser\tCtrl+Alt+M",    ID_TOOLS_MIBBROWSER
         MENUITEM "SNMP &walk...\tCtrl+Shift+F11", ID_TOOLS_SNMPWALK
+        MENUITEM SEPARATOR
+        MENUITEM "&Change password...",         ID_TOOLS_CHANGEPASSWORD
     END
     POPUP "&Help"
     BEGIN
@@ -1304,17 +1306,17 @@ IDD_SET_PASSWORD DIALOGEX 0, 0, 251, 63
 STYLE DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Change Password"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    EDITTEXT        IDC_EDIT_PASSWD1,40,16,144,14,ES_PASSWORD | 
+    EDITTEXT        IDC_EDIT_PASSWD1,39,16,144,14,ES_PASSWORD | 
                     ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_CLIENTEDGE
-    EDITTEXT        IDC_EDIT_PASSWD2,40,43,144,14,ES_PASSWORD | 
+    EDITTEXT        IDC_EDIT_PASSWD2,39,44,144,14,ES_PASSWORD | 
                     ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_CLIENTEDGE
     DEFPUSHBUTTON   "OK",IDOK,194,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,194,24,50,14
-    LTEXT           "New password:",IDC_STATIC,40,7,50,8
-    LTEXT           "Confirm password:",IDC_STATIC,40,34,58,8
-    ICON            IDI_PASSWORD,IDC_STATIC,7,7,20,20
+    LTEXT           "New password:",IDC_STATIC,39,7,50,8
+    LTEXT           "Confirm password:",IDC_STATIC,39,34,58,8
+    ICON            IDI_PASSWORD,IDC_STATIC,7,7,21,20
 END
 
 IDD_DCI_COLLECTION DIALOG DISCARDABLE  0, 0, 228, 193
@@ -2360,6 +2362,24 @@ BEGIN
     GROUPBOX        "Bitmap",IDC_STATIC_FRAME,7,32,170,68
 END
 
+IDD_CHANGE_PASSWORD DIALOGEX 0, 0, 251, 87
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Sans Serif"
+BEGIN
+    EDITTEXT        IDC_EDIT_PASSWD1,40,38,144,14,ES_PASSWORD | 
+                    ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_EDIT_PASSWD2,40,66,144,14,ES_PASSWORD | 
+                    ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_CLIENTEDGE
+    DEFPUSHBUTTON   "OK",IDOK,194,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,194,24,50,14
+    LTEXT           "New password:",IDC_STATIC,40,29,50,8
+    LTEXT           "Confirm password:",IDC_STATIC,40,56,58,8
+    ICON            IDI_PASSWORD,IDC_STATIC,7,7,21,20
+    LTEXT           "Your password was expired. Please change your password now.",
+                    IDC_STATIC_INFO,40,7,145,19
+END
+
 
 #ifndef _MAC
 /////////////////////////////////////////////////////////////////////////////
@@ -2505,7 +2525,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 244
         TOPMARGIN, 7
-        BOTTOMMARGIN, 56
+        BOTTOMMARGIN, 57
     END
 
     IDD_DCI_COLLECTION, DIALOG
@@ -2875,6 +2895,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 99
     END
+
+    IDD_CHANGE_PASSWORD, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 244
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 80
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -3044,6 +3072,16 @@ BEGIN
     ID_MAP_FORWARD          "Forward\nForward"
     ID_MAP_HOME             "Open root submap\nOpen root submap"
     ID_MAP_REDOLAYOUT       "Redo submap layout\nRedo submap layout"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    ID_TOOLS_CHANGEPASSWORD "Change password for current user\nChange password"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    ID_VIEW_REFRESH         "Refresh current view\nRefresh"
 END
 
 #endif    // English (U.S.) resources
